tweak ui to give ability to add new tree

--- a/src/app/organization/organization-tree.tpl.html
+++ b/src/app/organization/organization-tree.tpl.html
@@ -1,7 +1,7 @@
 <section class="organization-wrapper">
 	<div class="organization active" layout="row" layout-align="center" id="organizationNode">
 		<div class="tree-node">
-			Organization #1
+			Tree #1
 		</div>
 		<div layout="column" layout-align="start end">
 			<md-button href class="md-raised md-primary" 
