e2e test for updating missions for orgs

--- a/src/app/organization/mission-statement-modal.tpl.html
+++ b/src/app/organization/mission-statement-modal.tpl.html
@@ -8,7 +8,7 @@
 		{{modal.missionStatement}}
 	</div>
 	<md-content>
-		<form name="modal.missionStatementForm">
+		<form class="form-horizontal" name="modal.missionStatementForm">
 		    <div layout="row" layout-align="center center">
 		    	<div layout-align="start start">
 					<md-input-group class="long">
