--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,13 +1,16 @@
 /*============================================================*/
 /*===================Table Of Contents========================*/
 /*============================================================*/
-/*=Variables==================12==============================*/
-/*=Mixins=====================19==============================*/
-/*=Toolbar Styles=============27==============================*/
-/*=Dialog/Modal Styles =======31==============================*/
-/*=Toast Styles ==============41==============================*/
-/*=Btn Styles ================49==============================*/
-/*=Organization ==============65==============================*/
+/*=Variables==================18==============================*/
+/*=Mixins=====================26==============================*/
+/*=Toolbar Styles=============41==============================*/
+/*=Dialog/Modal Styles =======45==============================*/
+/*=Toast Styles ==============61==============================*/
+/*=Btn Styles ================68==============================*/
+/*=Input and form fields =====76==============================*/
+/*=Global Styles =============84==============================*/
+/*=Organization ==============149=============================*/
+/*=Login =====================202=============================*/
 /*============================================================*/
 md-item {
   margin: 0px 10px;
@@ -51,9 +54,6 @@ md-checkbox:focus .md-label {
 
 .error-msg.ng-hide-add.ng-hide-add-active,
 .error-msg.ng-hide-remove.ng-hide-remove-active {
-  -webkit-transition: opacity linear 0.5s;
-  -moz-transition: opacity linear 0.5s;
-  -ms-transition: opacity linear 0.5s;
   transition: opacity linear 0.5s;
 }
 
@@ -74,8 +74,6 @@ ul.list-horizontal li {
   margin-right: 15px;
   margin-bottom: 10px;
   padding: 5px;
-  -webkit-box-shadow: 0px 2px 6px #888888;
-  -moz-box-shadow: 0px 2px 6px #888888;
   -ms-box-shadow: 0px 2px 6px #888888;
   box-shadow: 0px 2px 6px #888888;
   max-width: 170px;
@@ -96,10 +94,22 @@ ul.list-horizontal li span.sub-text {
   max-height: 0 !important;
 }
 
+.well {
+  background-color: white;
+  padding: 50px 0px;
+  border-radius: 5px;
+  width: 40%;
+}
+
+.md-actions-form {
+  border-top: none;
+  margin-top: 60px;
+}
+.md-actions-form button {
+  margin-right: 15px;
+}
+
 .organization-wrapper > [layout=row], .organization-wrapper > [layout=column] {
-  -webkit-transition: max-height ease-in-out 0.9s;
-  -moz-transition: max-height ease-in-out 0.9s;
-  -ms-transition: max-height ease-in-out 0.9s;
   transition: max-height ease-in-out 0.9s;
   max-height: 200px;
 }
@@ -107,9 +117,6 @@ ul.list-horizontal li span.sub-text {
 .organization-wrapper .tree-node {
   padding: 20px 20px;
   background-color: #c2c5c3;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
   border-radius: 5px;
   color: white;
   max-width: 200px;
@@ -126,9 +133,6 @@ ul.list-horizontal li span.sub-text {
   background-color: #139e2a;
   padding: 10px 10px;
   color: white;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
   border-radius: 5px;
   min-width: 100px;
   margin-top: 10px;
@@ -145,4 +149,26 @@ ul.list-horizontal li span.sub-text {
 }
 .organization-wrapper .md-button + .md-button {
   margin-top: 5px;
+}
+
+.green-overlay {
+  background-color: #0d8120;
+  color: #0d8120;
+  height: 100%;
+  position: fixed !important;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+}
+.green-overlay h1 {
+  color: white;
+}
+.green-overlay input {
+  color: #0d8120;
+}
+.green-overlay .side-nav-btn {
+  margin: 0.85em 0;
+  margin-left: -7px;
 }
