--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -1,13 +1,16 @@
 /*============================================================*/
 /*===================Table Of Contents========================*/
 /*============================================================*/
-/*=Variables==================12==============================*/
-/*=Mixins=====================19==============================*/
-/*=Toolbar Styles=============27==============================*/
-/*=Dialog/Modal Styles =======31==============================*/
-/*=Toast Styles ==============41==============================*/
-/*=Btn Styles ================49==============================*/
-/*=Organization ==============65==============================*/
+/*=Variables==================18==============================*/
+/*=Mixins=====================26==============================*/
+/*=Toolbar Styles=============41==============================*/
+/*=Dialog/Modal Styles =======45==============================*/
+/*=Toast Styles ==============61==============================*/
+/*=Btn Styles ================68==============================*/
+/*=Input and form fields =====76==============================*/
+/*=Global Styles =============84==============================*/
+/*=Organization ==============149=============================*/
+/*=Login =====================202=============================*/
 /*============================================================*/
 
 //Imports
@@ -127,6 +130,22 @@ ul.list-horizontal {
 	overflow: hidden;
 	max-height: 0 !important;
 }
+
+.well {
+	background-color: $white;
+	padding: 50px 0px;
+	@include border-radius(5px);
+	width: 40%;
+}
+
+.md-actions-form {
+	border-top: none;
+	margin-top: 60px;
+
+	button {
+		margin-right: 15px;
+	}
+}
 // Organization ================================================================
 .organization-wrapper > [layout=row], .organization-wrapper > [layout=column] {
 	@include collapse();
@@ -180,4 +199,28 @@ ul.list-horizontal {
 		margin-top: 5px;
 	}
 }
+//  Login ================================================================
+.green-overlay {
+	background-color: $okraGreen;
+	color: $okraGreen;
+	height: 100%;
+	position: fixed !important;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 1000;
 
+	h1 {
+		color: $white;
+	}
+
+	input {
+		color: $okraGreen;
+	}
+
+	.side-nav-btn {
+		margin: 0.85em 0;
+		margin-left: -7px;
+	}
+}
