modal for creating a tree

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -47,6 +47,10 @@ md-checkbox:focus .md-label {
   border-color: transparent;
 }
 
+.horizontal-radio-group md-radio-button:first-child {
+  margin-top: 15px;
+}
+
 .error-msg {
   color: #ef5350;
   opacity: 1;
