--- a/src/app/organization/organization-trees-selection.tpl.html
+++ b/src/app/organization/organization-trees-selection.tpl.html
@@ -25,7 +25,7 @@
 		    </md-button>
 	    </div>
 	    <div layout="column" layout-align="start end">
-	    	<md-button class="md-raised md-primary" aria-label="Add Tree">
+	    	<md-button class="md-raised md-primary" ng-click="vm.openAddTreeModal()" aria-label="Add Tree">
 		    	<i class="fa fa-tree"></i>
 		    	<md-tooltip>
 					Add a Tree
