--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -11,7 +11,7 @@
 /*=Global Styles =============84==============================*/
 /*=Organization ==============149=============================*/
 /*=Login =====================202=============================*/
-/*============================================================*/
+/*=404Error===================239=============================*/
 md-item {
   margin: 0px 10px;
 }
@@ -58,9 +58,6 @@ md-checkbox:focus .md-label {
 
 .error-msg.ng-hide-add.ng-hide-add-active,
 .error-msg.ng-hide-remove.ng-hide-remove-active {
-  -webkit-transition: opacity linear 0.5s;
-  -moz-transition: opacity linear 0.5s;
-  -ms-transition: opacity linear 0.5s;
   transition: opacity linear 0.5s;
 }
 
@@ -81,8 +78,6 @@ ul.list-horizontal li {
   margin-right: 15px;
   margin-bottom: 10px;
   padding: 5px;
-  -webkit-box-shadow: 0px 2px 6px #888888;
-  -moz-box-shadow: 0px 2px 6px #888888;
   -ms-box-shadow: 0px 2px 6px #888888;
   box-shadow: 0px 2px 6px #888888;
   max-width: 170px;
@@ -106,9 +101,6 @@ ul.list-horizontal li span.sub-text {
 .well {
   background-color: white;
   padding: 50px 0px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
   border-radius: 5px;
   width: 40%;
 }
@@ -122,9 +114,6 @@ ul.list-horizontal li span.sub-text {
 }
 
 .organization-wrapper > [layout=row], .organization-wrapper > [layout=column] {
-  -webkit-transition: max-height ease-in-out 0.9s;
-  -moz-transition: max-height ease-in-out 0.9s;
-  -ms-transition: max-height ease-in-out 0.9s;
   transition: max-height ease-in-out 0.9s;
   max-height: 200px;
 }
@@ -135,9 +124,6 @@ ul.list-horizontal li span.sub-text {
 .organization-wrapper .tree-node {
   padding: 20px 20px;
   background-color: #c2c5c3;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
   border-radius: 5px;
   color: white;
   width: 155px;
@@ -154,9 +140,6 @@ ul.list-horizontal li span.sub-text {
   background-color: #139e2a;
   padding: 10px 10px;
   color: white;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
   border-radius: 5px;
   min-width: 100px;
   margin-top: 10px;
@@ -195,4 +178,12 @@ ul.list-horizontal li span.sub-text {
 .green-overlay .side-nav-btn {
   margin: 0.85em 0;
   margin-left: -7px;
+}
+
+.error-not-found {
+  text-align: center;
+}
+.error-not-found img {
+  margin: 15px auto;
+  width: 300px;
 }
