--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -11,7 +11,7 @@
 /*=Global Styles =============84==============================*/
 /*=Organization ==============149=============================*/
 /*=Login =====================202=============================*/
-/*============================================================*/
+/*=404Error===================239=============================*/
 
 //Imports
 @import "transitions.scss";
@@ -233,5 +233,15 @@ ul.list-horizontal {
 	.side-nav-btn {
 		margin: 0.85em 0;
 		margin-left: -7px;
+	}
+}
+
+// 404Error ==============================================================
+.error-not-found {
+	text-align: center;
+
+	img {
+		margin: 15px auto;
+		width: 300px;
 	}
 }
