--- a/src/app/organization/organization-trees-selection.tpl.html
+++ b/src/app/organization/organization-trees-selection.tpl.html
@@ -37,7 +37,7 @@
 	<div layout="column" style="max-height: 100000px;" class="collapse" id="treesNode">
 		<div class="centered-row" layout="row" layout-align="start center" ng-repeat="treeRow in vm.formattedTrees">
 			<div class="objective" layout="row" layout-align="start" ng-repeat="tree in treeRow">
-				<div class="tree-node">
+				<div class="tree-node" ng-click="vm.viewTree(tree.Id)">
 					{{tree.Name}}
 				</div>
 				<div layout="column" layout-align="start end">
