--- a/src/app/organization/organization-trees-selection.tpl.html
+++ b/src/app/organization/organization-trees-selection.tpl.html
@@ -37,9 +37,7 @@
 	<div layout="column" style="max-height: 100000px;" class="collapse" id="treesNode">
 		<div class="centered-row" layout="row" layout-align="start center" ng-repeat="treeRow in vm.formattedTrees">
 			<div class="objective" layout="row" layout-align="start" ng-repeat="tree in treeRow">
-				<div class="tree-node" ng-click="vm.viewTree(tree.Id)">
-					{{tree.Name}}
-				</div>
+				<a class="tree-node" ui-sref="organization/tree({ treeId: tree.Id, organization: vm.orgName })">{{tree.Name}}</a>
 				<div layout="column" layout-align="start end">
 		        	<md-button href class="md-raised md-primary" aria-label="edit">
 						<i class="fa fa-pencil"></i>
