--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -173,6 +173,7 @@ ul.list-horizontal {
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
+		text-decoration: none;
 	}
 
 	.objective.active, 
