--- a/src/app/organization/organization-trees-selection.tpl.html
+++ b/src/app/organization/organization-trees-selection.tpl.html
@@ -38,7 +38,7 @@
 		<div class="centered-row" layout="row" layout-align="start center" ng-repeat="treeRow in vm.formattedTrees">
 			<div class="objective" layout="row" layout-align="start" ng-repeat="tree in treeRow">
 				<a class="tree-node" ui-sref="organization/tree({ treeId: tree.Id, organization: vm.orgName })">{{tree.Name}}</a>
-				<div layout="column" layout-align="start end">
+				<div layout="column" layout-align="start end" ok-edit-node>
 		        	<md-button href class="md-raised md-primary" aria-label="edit">
 						<i class="fa fa-pencil"></i>
 		        	</md-button>
