modified the html and css for the editable content

--- a/src/app/organization/organization-trees-selection.tpl.html
+++ b/src/app/organization/organization-trees-selection.tpl.html
@@ -37,7 +37,18 @@
 	<div layout="column" style="max-height: 100000px;" class="collapse" id="treesNode">
 		<div class="centered-row" layout="row" layout-align="start center" ng-repeat="treeRow in vm.formattedTrees">
 			<div class="objective" layout="row" layout-align="start" ng-repeat="tree in treeRow">
-				<a class="tree-node" ui-sref="organization/tree({ treeId: tree.Id, organization: vm.orgName })">{{tree.Name}}</a>
+				<a class="tree-node" ng-hide="tree.isEditMode" ui-sref="organization/tree({ treeId: tree.Id, organization: vm.orgName })">{{tree.Name}}</a>
+				<div class="tree-node" ng-show="tree.isEditMode">
+					<md-input-group>
+					   <md-input required class="short" name="treeName" ng-model="tree.newName" autocapitalize="off"></md-input>
+					</md-input-group>
+				</div>
+				<div class="error-msg ng-hide" layout-align="center end" ng-show="vm.formSubmitted && vm.userLoginForm.username.$invalid" ng-cloak>
+					<i class="fa fa-warning"></i>
+					<md-tooltip>
+						This field is required
+					</md-tooltip>
+				</div>
 				<div layout="column" layout-align="start end" ok-edit-node edit="fa-pencil" cancel="fa-close" node="tree">
 		        	<md-button ng-show="!tree.isEditMode" href class="md-raised md-primary fade-in" aria-label="edit">
 						<i class="fa fa-pencil"></i>
