saving editable field for nodes

--- a/src/app/organization/organization-trees-selection.tpl.html
+++ b/src/app/organization/organization-trees-selection.tpl.html
@@ -49,7 +49,7 @@
 						This field is required
 					</md-tooltip>
 				</div>
-				<div layout="column" layout-align="start end" ok-edit-node edit="fa-pencil" cancel="fa-close" node="tree">
+				<div layout="column" layout-align="start end" ok-edit-node edit="fa-pencil" cancel="fa-close" save="fa-check" node="tree">
 		        	<md-button ng-show="!tree.isEditMode" href class="md-raised md-primary fade-in" aria-label="edit">
 						<i class="fa fa-pencil"></i>
 		        	</md-button>
