--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -189,8 +189,10 @@ ul.list-horizontal {
 				color: $white;
 			}
 		}
+	}
 
-
+	.tree-node:hover {
+		@include box-shadow(0px, 2px, 6px, #888888);
 	}
 
 	.objective.active, 
