--- a/src/app/tree/tree.tpl.html
+++ b/src/app/tree/tree.tpl.html
@@ -31,6 +31,9 @@
 		<div class="objective" layout="row" layout-align="start" ng-repeat="objective in vm.tree.objectives">
 			<div class="tree-node" layout-align="start">
 				{{objective.name}}
+				<md-tooltip ng-if="objective.name.length > 14">
+					{{objective.name}}
+				</md-tooltip>
 			</div>
 			<div layout="column" layout-align="start end">
 	            <md-button href class="md-raised" ng-click="vm.changeCurrentObjective(objective)" ok-collapse ok-toggle-color linked-to="objectiveNode"  all-linked-nodes="vm.linkedNodeIds" aria-label="toggle">
@@ -48,6 +51,9 @@
 		<div class="key-result" layout="row" layout-align="start" ng-repeat="keyResult in vm.currentObjective.key_results">
 			<div class="tree-node">
 				{{keyResult.name}}
+				<md-tooltip ng-if="keyResult.name.length > 14">
+					{{keyResult.name}}
+				</md-tooltip>
 			</div>
 			<div layout="column" layout-align="end end">
 				<md-button href class="md-raised" ng-click="vm.changeCurrentKeyResult(keyResult)" ok-collapse ok-toggle-color linked-to="keyResultNode" all-linked-nodes="vm.linkedNodeIds" aria-label="toggle">
@@ -63,7 +69,7 @@
 	<!-- Tasks -->
 	<div layout="column" class="collapse" ok-collapse linked-to="taskNode" layout-align="space-around center" all-linked-nodes="vm.linkedNodeIds" id="taskNode">
 		<div layout="row" layout-align="start center" ng-repeat="task in vm.currentKeyResult.tasks">
-			<md-checkbox ng-model="vm.isChecked[$index]" aria-label></md-checkbox>
+			<md-checkbox ng-model="task.complete" aria-label></md-checkbox>
 			<div class="task-node">
 				{{task.name}}
 			</div>
