--- a/src/app/organization/organization-trees-selection.tpl.html
+++ b/src/app/organization/organization-trees-selection.tpl.html
@@ -38,7 +38,7 @@
 					   <md-input required class="short" name="treeName" ng-model="tree.newName" autocapitalize="off"></md-input>
 					</md-input-group>
 				</div>
-				<div class="error-msg ng-hide" layout-align="center end" ng-show="vm.formSubmitted && vm.userLoginForm.username.$invalid" ng-cloak>
+				<div class="error-msg ng-hide" layout-align="center end" ng-show="vm.formSubmitted && tree.newName.$invalid" ng-cloak>
 					<i class="fa fa-warning"></i>
 					<md-tooltip>
 						This field is required
