--- a/src/app/tree/tree.tpl.html
+++ b/src/app/tree/tree.tpl.html
@@ -29,18 +29,37 @@
 	<!-- objectives -->
 	<div layout="row" class="collapse" layout-align="center center" id="objectiveNode">
 		<div class="objective" layout="row" layout-align="start" ng-repeat="objective in vm.tree.objectives">
-			<div class="tree-node" layout-align="start">
+			<div class="tree-node" layout-align="start" ng-show="!objective.isEditMode">
 				{{objective.name}}
 				<md-tooltip ng-if="objective.name.length > 14">
 					{{objective.name}}
 				</md-tooltip>
 			</div>
-			<div layout="column" layout-align="start end">
+			<div class="tree-node" layout-align="start" ng-show="objective.isEditMode">
+				<md-input-group>
+				   <md-input required class="short" name="treeName" ng-model="objective.newName" autocapitalize="off"></md-input>
+				</md-input-group>
+				<div class="error-msg ng-hide" layout-align="center end" ng-show="vm.formSubmitted && vm.objective.newName.$invalid" ng-cloak>
+					<i class="fa fa-warning"></i>
+					<md-tooltip>
+						This field is required
+					</md-tooltip>
+				</div>
+			</div>
+			<div layout="column" layout-align="start end" ok-edit-node edit="fa-pencil" cancel="fa-close" save="fa-check" node="objective">
 	            <md-button href class="md-raised" ng-click="vm.changeCurrentObjective(objective)" ok-collapse ok-toggle-color linked-to="objectiveNode"  all-linked-nodes="vm.linkedNodeIds" aria-label="toggle">
 	            	<i class="fa fa-plus"></i>
 	        	</md-button>
-	        	<md-button href class="md-raised md-primary" aria-label="edit">
+	        	<md-button ng-show="!objective.isEditMode" href class="md-raised md-primary fade-in" aria-label="edit">
 					<i class="fa fa-pencil"></i>
+	        	</md-button>
+	        </div>
+	        <div layout="column" layout-align="start end" ok-edit-node edit="fa-pencil" cancel="fa-close" save="fa-check" node="objective">
+	        	<md-button ng-show="objective.isEditMode" href class="md-raised md-primary fade-in" aria-label="edit">
+					<i class="fa fa-check"></i>
+	        	</md-button>
+	        	<md-button ng-show="objective.isEditMode" href class="md-raised md-warn fade-in" aria-label="edit">
+					<i class="fa fa-close"></i>
 	        	</md-button>
 	        </div>
 		</div>
