documentation for ok-edit-node directive

--- a/src/app/tree/tree.tpl.html
+++ b/src/app/tree/tree.tpl.html
@@ -49,10 +49,10 @@
 	        	</md-button>
 	        </div>
 	        <div layout="column" layout-align="start end" ok-edit-node edit="fa-pencil" cancel="fa-close" save="fa-check" node="objective">
-	        	<md-button ng-show="objective.isEditMode" href class="md-raised md-primary fade-in" aria-label="edit">
+	        	<md-button ng-show="objective.isEditMode" href class="md-raised md-primary fade-in" aria-label="save">
 					<i class="fa fa-check"></i>
 	        	</md-button>
-	        	<md-button ng-show="objective.isEditMode" href class="md-raised md-warn fade-in" aria-label="edit">
+	        	<md-button ng-show="objective.isEditMode" href class="md-raised md-warn fade-in" aria-label="close">
 					<i class="fa fa-close"></i>
 	        	</md-button>
 	        </div>
@@ -82,10 +82,10 @@
 	        	</md-button>
 	        </div>
 	        <div layout="column" layout-align="start end" ok-edit-node edit="fa-pencil" cancel="fa-close" save="fa-check" node="keyResult">
-	        	<md-button ng-show="keyResult.isEditMode" href class="md-raised md-primary fade-in" aria-label="edit">
+	        	<md-button ng-show="keyResult.isEditMode" href class="md-raised md-primary fade-in" aria-label="save">
 					<i class="fa fa-check"></i>
 	        	</md-button>
-	        	<md-button ng-show="keyResult.isEditMode" href class="md-raised md-warn fade-in" aria-label="edit">
+	        	<md-button ng-show="keyResult.isEditMode" href class="md-raised md-warn fade-in" aria-label="close">
 					<i class="fa fa-close"></i>
 	        	</md-button>
 	        </div>
