--- a/src/app/organization/organization-selection.tpl.html
+++ b/src/app/organization/organization-selection.tpl.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="centered-row" layout="row" layout-align="start center" ng-repeat="organizationRow in vm.organizations">
 		<div class="objective" layout="row" layout-align="start" ng-repeat="org in organizationRow">
-			<a class="tree-node">
+			<a href class="tree-node" ui-sref="organization({ organization: org })">
 				{{org}}
 				<md-tooltip ng-if="org.length > 14">
 					{{org}}
@@ -14,7 +14,7 @@
 	</div>
 	<div layout="row" layout-align="center center" ng-if="!vm.organizations || vm.organizations.length < 0" class="ng-hide">
 		New to Okra? That's alright. Click here to create an organization.
-		<md-button class="md-raised md-primary" ng-click="modal.closeModal()" aria-label="cancel">
+		<md-button class="md-raised md-primary" ng-click="vm.addOrganization()" aria-label="cancel">
 			Create an Organization <i class="fa fa-plus"></i>
 		</md-button>
 	</div>
