--- a/src/app/organization/organization-trees-selection.tpl.html
+++ b/src/app/organization/organization-trees-selection.tpl.html
@@ -1,7 +1,7 @@
 <section class="organization-wrapper">
 	<div class="organization active" style="margin-bottom: 5px;" layout="row" layout-align="center" id="organizationNode">
 		<div class="tree-node">
-			Organization #1
+			{{vm.organization}}
 		</div>
 		<div layout="column" layout-align="start end">
 			<md-button href class="md-raised md-primary" 
@@ -32,7 +32,7 @@
 	<div layout="column" style="max-height: 100000px;" class="collapse" id="treesNode">
 		<div class="centered-row" layout="row" layout-align="start center" ng-repeat="treeRow in vm.trees">
 			<div class="objective" layout="row" layout-align="start" ng-repeat="tree in treeRow">
-				<a class="tree-node" ng-hide="tree.isEditMode" ui-sref="organization/tree({ treeIdEnc: (tree.Id | okEncrypt), organization: vm.orgName })">
+				<a class="tree-node" ng-hide="tree.isEditMode" ui-sref="organization/tree({ treeIdEnc: (tree.Id | okEncrypt), organization: vm.organization })">
 					{{tree.Name}}
 					<md-tooltip ng-if="tree.Name.length > 14">
 						{{tree.Name}}
