--- a/src/app/tree/tree.tpl.html
+++ b/src/app/tree/tree.tpl.html
@@ -17,7 +17,7 @@
 	    	</md-button>
 	    </div>
 	    <div layout="column" layout-align="start end">
-	    	<md-button class="md-raised md-primary" ng-click="vm.openOrganizationMembersModal()" aria-label="members">
+	    	<md-button class="md-raised md-primary" ng-click="vm.openTreeMembersModal()" aria-label="members">
 		    	<i class="fa fa-users"></i>
 		    </md-button>
 		    <md-button class="md-raised md-primary" ng-click="vm.openMissionStatementModal()" aria-label="mission statement">
