--- a/src/app/shared/members-modal.tpl.html
+++ b/src/app/shared/members-modal.tpl.html
@@ -1,7 +1,7 @@
 <md-dialog flex="50">
 	<div layout="row" layout-align="center">
 	    <md-subheader>
-	    	<h3>Organization Members</h3>
+	    	<h3>Members</h3>
 	    </md-subheader>
 	</div>
 	<div layout="row" layout-align="start center">
