--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -172,6 +172,10 @@ ul.list-horizontal {
 .fade-in.ng-enter, .fade-in.ng-leave {
   @include fade-in();
 }
+
+.horizontal-checkbox {
+	float: left;
+}
 // Organization ================================================================
 .organization-wrapper > [layout=row], .organization-wrapper > [layout=column] {
 	@include collapse();
